tests/negative/meta_readonly.urb
n = [1],
n.name = 1,
